<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/list_item">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:orientation="vertical">

        <TextView
                android:id="@+id/tvStatus"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="#000"
                android:textSize="20sp"
                tools:targetApi="jelly_bean" android:text="@string/transaction_status"/>

        <TextView
                android:id="@+id/tvAmount"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="#000"
                android:text="@string/tran_amount"
                android:textSize="20sp"
                tools:targetApi="jelly_bean"/>

        <TextView
                android:id="@+id/tvInfo"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="#000"
                android:text="@string/tran_info"
                android:textSize="20sp"
                tools:targetApi="jelly_bean"/>
        <TextView
                android:id="@+id/tvCategory"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/tran_category"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#000"
                tools:targetApi="jelly_bean"/>

    </LinearLayout>

</LinearLayout>